# ZControl

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.ca1e595  Demo.cpp  Demo.h  Main.qml  ZButton.qml  ZButtonMdelInfo - 副本.cpp  ZButtonMdelInfo - 副本.h  ZButtonMdelInfo.cpp  ZButtonMdelInfo.h  ZButtonModelInfo.h  ZColumnButton.qml  ZConfig.cpp  ZConfig.h  ZRectangle.h  ZRowButton.qml  ZTableHeaderMdelInfo.cpp  ZTableHeaderMdelInfo.h  ZTableModel.cpp  ZTableModel.h  ZTableModelFinal.h  ZTableModelImpl.h  ZTableModelInfo.h  ZTwoDimension.cpp  ZTwoDimension.h  ZTwoDimensionImpl.h  demo.qrc  main.cpp  zroundbuttonitem.cpp  zroundbuttonitem.h
Demo2/: CMakeLists.txt  app.qml
ZControls/: CMakeLists.txt  ZButtonModelInfo.cpp  ZButtonModelInfo.h  ZConfig.cpp  ZConfig.h  ZControlsPlugin.h  ZTableModel.h  ZTableModelFinal.cpp  ZTableModelInfo.cpp  ZTwoDimension.cpp  ZTwoDimension.h  ZTwoDimensionImpl.h
ZControls/Controls/: ZButton.qml  ZRowButton.qml
ZControls/ZControls/: CMakeLists.txt  piechart.h  pieslice.h  qmldir
inc/os/: os.h
inc/os/Android/export_flags/: zControlExport.h
widgetQML/: CMakeLists.txt  mainwindow.ui
